Added Recipe generation constraint and avoided duplicate recipes