@@ -1,3 +1,4 @@
+// Save this code!
 package com.pantrypilot.service;
 
 import com.pantrypilot.model.PantryIngredient;
@@ -45,6 +46,13 @@ public class RecipeMatcherService {
         List<Recipe> matchedRecipes = recipeService.getRecipesByPrepTimeAndIngredients(
                 minPrepTime, maxPrepTime, pantryIngredients);
 
+        // This set will only contain titles from the initial DB match, before AI is called
+        Set<String> initialDbTitles = matchedRecipes.stream()
+                .map(r -> r.getTitle().toLowerCase())
+                .collect(Collectors.toSet());
+
+        Set<String> aiTitlesGeneratedInThisCall = new HashSet<>();
+
         if (matchedRecipes.size() < batchSize) {
             int missing = batchSize - matchedRecipes.size();
 
@@ -52,21 +60,23 @@ public class RecipeMatcherService {
                     pantryIngredients,
                     minPrepTime,
                     maxPrepTime,
-                    matchedRecipes.stream()
-                            .map(r -> r.getTitle().toLowerCase())
-                            .collect(Collectors.toSet()),
+                    initialDbTitles, // Pass only the DB titles as excluded for the first AI call
                     missing);
 
             matchedRecipes.addAll(aiRecipes);
+            aiTitlesGeneratedInThisCall.addAll(aiRecipes.stream()
+                .map(r -> r.getTitle().toLowerCase())
+                .collect(Collectors.toList())); // Use collect for clarity
         }
 
-        // ✅ Convert recipes to DTOs before caching
+        // Convert recipes to DTOs before caching
         List<RecipeDTO> dtoRecipes = matchedRecipes.stream()
                 .map(RecipeDTO::new)
                 .collect(Collectors.toList());
 
-        // ✅ Cache with prep times
-        return recipeCacheService.addMatchedRecipes(dtoRecipes, pantryIngredients, minPrepTime, maxPrepTime);
+        // Cache with prep times. The RecipeCacheService.addMatchedRecipes will handle de-duplication
+        // and populate its internal allCachedTitles set with the unique titles from dtoRecipes.
+        return recipeCacheService.addMatchedRecipes(dtoRecipes, pantryIngredients, minPrepTime, maxPrepTime, aiTitlesGeneratedInThisCall);
     }
 
     /**
@@ -75,47 +85,78 @@ public class RecipeMatcherService {
      */
     @Transactional
     public List<RecipeDTO> getNextBatch(String token, int batchSize) throws Exception {
-        List<RecipeDTO> batch = recipeCacheService.getNextRecipes(token, batchSize);
+        if (token == null || batchSize <= 0) return Collections.emptyList();
 
-        if (batch.isEmpty() && recipeCacheService.isExhausted(token)) {
-            System.out.println("Cache exhausted for token: " + token + " → falling back to AI");
+        List<RecipeDTO> resultBatch = new ArrayList<>();
 
-            // pull filters & ingredients from cache
+        // 1️⃣ Pull recipes already cached
+        // The getNextRecipes method internally handles presentedTitles and AI limits
+        List<RecipeDTO> cacheBatch = recipeCacheService.getNextRecipes(token, batchSize);
+        resultBatch.addAll(cacheBatch);
+
+        int filled = resultBatch.size();
+
+        // 2️⃣ Determine remaining AI quota
+        int aiGeneratedSoFar = recipeCacheService.getAiGeneratedCount(token);
+        int aiRemaining = Math.max(0, 5 - aiGeneratedSoFar); // Max 5 AI recipes per session
+        int remainingSlots = batchSize - filled;
+
+        // 3️⃣ If batch not full and AI quota available, fetch AI recipes
+        if (remainingSlots > 0 && aiRemaining > 0) {
+            int toFetchFromAI = Math.min(remainingSlots, aiRemaining);
+
             int minPrep = recipeCacheService.getMinPrepTime(token);
             int maxPrep = recipeCacheService.getMaxPrepTime(token);
-            List<PantryIngredient> pantryIngredients = recipeCacheService.getCachedIngredients(token);
-            Set<String> alreadySeenTitles = recipeCacheService.getPresentedTitles(token);
+            List<PantryIngredient> pantry = recipeCacheService.getCachedIngredients(token);
+            
+            // IMPORTANT: Get ALL titles already cached (including those not yet presented)
+            // to pass to AI for exclusion.
+            Set<String> allExcludedTitles = recipeCacheService.getAllCachedTitles(token);
 
-            // fetch fresh recipes (guaranteed valid titles)
-            List<Recipe> aiRecipes = fetchValidAIRecipes(
-                    pantryIngredients,
-                    minPrep,
-                    maxPrep,
-                    alreadySeenTitles,
-                    batchSize);
+            List<Recipe> aiRecipes = fetchValidAIRecipes(pantry, minPrep, maxPrep, allExcludedTitles, toFetchFromAI);
+            List<RecipeDTO> dtoAI = aiRecipes.stream().map(RecipeDTO::new).toList();
 
-            List<RecipeDTO> dtoRecipes = aiRecipes.stream()
-                    .map(RecipeDTO::new)
-                    .toList();
-
-            // add to cache
-            recipeCacheService.addMoreRecipes(token, dtoRecipes);
-
-            // now retrieve
-            return recipeCacheService.getNextRecipes(token, batchSize);
+            // Add AI recipes to cache. The addMoreRecipes method will handle de-duplication
+            // against its internal allCachedTitles set.
+            recipeCacheService.addMoreRecipes(token, dtoAI, true);
+            
+            // Re-attempt to get recipes from cache after new ones are added
+            // This is crucial because `getNextRecipes` might have returned an empty list
+            // if `currentIndex` was at the end before `addMoreRecipes` was called.
+            // We now get up to `remainingSlots` new items, which will be the newly added AI recipes.
+            List<RecipeDTO> freshAIFromCache = recipeCacheService.getNextRecipes(token, remainingSlots);
+            resultBatch.addAll(freshAIFromCache);
+            filled = resultBatch.size();
         }
 
-        return batch;
+        // 4️⃣ Check if AI quota is exhausted and if no more recipes are available
+        // Note: The IllegalStateException should only be thrown if we genuinely ran out of recipes
+        // and hit the AI limit, preventing an infinite loop.
+        // It's better to return an empty list or a list smaller than batchSize if no more are available,
+        // rather than throwing an exception for every "no more recipes" scenario.
+        if (resultBatch.isEmpty() && recipeCacheService.isExhausted(token)) {
+             // This indicates no more recipes can be provided for this token.
+             // The frontend should handle an empty list as "no more results."
+             System.out.println("No more recipes available for token: " + token);
+             return Collections.emptyList();
+        }
+
+
+        // 5️⃣ Return at most batchSize recipes
+        return (resultBatch.size() > batchSize) ? resultBatch.subList(0, batchSize) : resultBatch;
     }
+
+
 
     /**
      * Helper to repeatedly fetch AI recipes until enough valid ones are collected.
+     * Now accepts a Set of ALL titles to exclude, not just already presented.
      */
     private List<Recipe> fetchValidAIRecipes(
             List<PantryIngredient> pantryIngredients,
             int minPrepTime,
             int maxPrepTime,
-            Set<String> alreadySeenTitles,
+            Set<String> allExcludedTitles, // Renamed for clarity
             int required) throws Exception {
 
         List<Map<String, Object>> ingredientsForAI = pantryIngredients.stream()
@@ -131,6 +172,9 @@ public class RecipeMatcherService {
         List<Recipe> validRecipes = new ArrayList<>();
         int attempts = 0;
 
+        // Create a working set for titles already considered in this specific AI fetching loop
+        Set<String> localExcludedTitles = new HashSet<>(allExcludedTitles);
+
         while (validRecipes.size() < required && attempts < MAX_AI_RETRIES) {
             attempts++;
 
@@ -139,25 +183,20 @@ public class RecipeMatcherService {
                     ingredientsForAI,
                     minPrepTime,
                     maxPrepTime,
-                    alreadySeenTitles,
+                    localExcludedTitles, // Pass the growing set of excluded titles to AI
                     stillNeeded);
 
-            // ✅ Normalize excluded titles once
-            Set<String> lowerExcluded = alreadySeenTitles.stream()
-                    .map(String::toLowerCase)
-                    .collect(Collectors.toSet());
-
-            // ✅ filter out: null/empty titles AND ones already seen
-            aiRecipes = aiRecipes.stream()
+            // Filter out: null/empty titles AND ones already seen (locally or globally)
+            List<Recipe> newUniqueRecipes = aiRecipes.stream()
                     .filter(r -> r.getTitle() != null && !r.getTitle().trim().isEmpty())
-                    .filter(r -> !lowerExcluded.contains(r.getTitle().toLowerCase()))
-                    .toList();
+                    .filter(r -> !localExcludedTitles.contains(r.getTitle().toLowerCase())) // Use localExcludedTitles
+                    .collect(Collectors.toList()); // Collect to a list for adding
 
-            // ✅ Add to results and mark as seen
-            validRecipes.addAll(aiRecipes);
-            alreadySeenTitles.addAll(aiRecipes.stream()
+            // Add to results and update local excluded titles for subsequent AI calls in this loop
+            validRecipes.addAll(newUniqueRecipes);
+            newUniqueRecipes.stream()
                     .map(r -> r.getTitle().toLowerCase())
-                    .toList());
+                    .forEach(localExcludedTitles::add); // Add new unique titles to localExcludedTitles
         }
 
         return validRecipes;
